--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-feather": "^1.1.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
