--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,15 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-deck-swiper": "^2.0.16",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-feather": "^1.1.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-star-rating": "^1.1.0",
+    "tailwind-react-native-classnames": "^1.5.1",
     "tailwindcss": "^3.3.2",
     "twrnc": "^3.6.1"
   },
